Fixed errors in justify-content: space-between

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       display: flex;
       justify-content: center;
     }
+    .social-icons {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
 
     .social-icons a {
       color: #7f5af0;
@@ -42,6 +47,8 @@
       padding: 5px;
       display: flex;
       align-items: center;
+      justify-content: space-between;
+      width: 100%;
     }
 
     .link a {
